fix toolbar spacing

--- a/css/classifier.styl
+++ b/css/classifier.styl
@@ -52,7 +52,7 @@
     
     li
       overflow: hidden
-      padding: 5px 5px 0
+      padding: 3px 3px 0
     
       label
         display: block
